--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,37 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
+  ],
+  "regexManagers": [
+    {
+      "fileMatch": ["(^|/)tools.Dockerfile$"],
+      "matchStrings": ["PUBLISHER_VERSION=(?<currentValue>.*?)\n"],
+      "depNameTemplate": "HL7/fhir-ig-publisher",
+      "datasourceTemplate": "github-releases"
+    },
+    {
+      "fileMatch": ["(^|/)tools.Dockerfile$"],
+      "matchStrings": ["SUSHI_VERSION=(?<currentValue>.*?)\n"],
+      "depNameTemplate": "FHIR/sushi",
+      "datasourceTemplate": "github-releases"
+    }
+  ],
+  "packageRules": [
+    {
+      "packageNames": [
+        "FHIR/sushi"
+      ],
+      "extractVersion": "^v(?<version>.*)$"
+    },
+    {
+      "packageNames": [
+        "HL7/fhir-ig-publisher"
+      ],
+      "extractVersion": "^(?<version>.*)$"
+    },
+    {
+      "updateTypes": ["minor", "patch", "pin", "digest"]
+    }
   ]
 }
