--- a/renovate.json
+++ b/renovate.json
@@ -5,13 +5,13 @@
   ],
   "regexManagers": [
     {
-      "fileMatch": ["(^|/)tools.Dockerfile$"],
+      "fileMatch": ["(^|/)Dockerfile$"],
       "matchStrings": ["PUBLISHER_VERSION=(?<currentValue>.*?)\n"],
       "depNameTemplate": "HL7/fhir-ig-publisher",
       "datasourceTemplate": "github-releases"
     },
     {
-      "fileMatch": ["(^|/)tools.Dockerfile$"],
+      "fileMatch": ["(^|/)Dockerfile$"],
       "matchStrings": ["SUSHI_VERSION=(?<currentValue>.*?)\n"],
       "depNameTemplate": "FHIR/sushi",
       "datasourceTemplate": "github-releases"
