--- a/.github/workflows/daily-trivy-scan.yaml
+++ b/.github/workflows/daily-trivy-scan.yaml
@@ -2,19 +2,27 @@ name: scan
 on:
   schedule:
     - cron: "0 3 * * *"
+
+permissions: read-all
+
 jobs:
-  scan:
-    name: Scan
-    runs-on: ubuntu-20.04
+  scan-image:
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+    name: scan
+    runs-on: "ubuntu-22.04"
     steps:
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
         with:
-          image-ref: "ghcr.io/miracum/ig-build-tools:latest"
+          image-ref: ghcr.io/${{ github.repository }}:latest
           format: "template"
           template: "@/contrib/sarif.tpl"
           output: "trivy-results.sarif"
           severity: "CRITICAL,HIGH"
+
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
         with:
