--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,9 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base",
-    ":disableDependencyDashboard"
-  ],
+  "extends": ["github>miracum/.github//renovate/default"],
   "regexManagers": [
     {
       "fileMatch": ["(^|/)Dockerfile$"],
@@ -20,15 +17,11 @@
   ],
   "packageRules": [
     {
-      "packageNames": [
-        "FHIR/sushi"
-      ],
+      "packageNames": ["FHIR/sushi"],
       "extractVersion": "^v(?<version>.*)$"
     },
     {
-      "packageNames": [
-        "HL7/fhir-ig-publisher"
-      ],
+      "packageNames": ["HL7/fhir-ig-publisher"],
       "extractVersion": "^(?<version>.*)$"
     },
     {
