chore: switch to standard workflow and update deps

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -7,6 +7,7 @@ DISABLE:
 
 DISABLE_LINTERS:
   - REPOSITORY_DEVSKIM
+  - MARKDOWN_MARKDOWN_LINK_CHECK
 
 SHOW_ELAPSED_TIME: true
 FILEIO_REPORTER: false
@@ -14,3 +15,7 @@ FILEIO_REPORTER: false
 REPOSITORY_TRIVY_ARGUMENTS:
   - "--severity=HIGH,CRITICAL"
   - "--ignore-unfixed"
+
+REPOSITORY_KICS_CONFIG_FILE: .kics.yaml
+REPOSITORY_KICS_ARGUMENTS:
+  - --fail-on=HIGH
